# walla_walla_course_search

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test.py
walla_walla_course_search/: __init__.py  mongodb_storage.py  populate_mongodb.py  scraper.py  semantic_search.py  word2vec_trainer.py
